[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reprobe"
version = "0.1.0"
description = "Linear probes and activation steering for transformer models"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "LateFR"}
]
dependencies = [
    "transformers>=4.3.0",
    "datasets>=4.7.0",
    "tqdm>=4.67.3",
    "accelerate>=1.13.0",
    "detoxify>=0.5.2",   
    "matplotlib",
    "torch>=2.6.0",
    "h5py"
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]


[tool.setuptools.packages.find]
where = ["src"]
